--- a/index.html
+++ b/index.html
@@ -1,11 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menú hamburguesa solo con CSS</title>
 </head>
+
 <body>
-    
+
+    <header class="header">
+        <nav class="navbar">.
+
+            <h1 class="logo">Logo</h1>
+
+            <label class="label_hamburguesa" for="menu_hamburguesa">
+                <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="currentColor" class="list_icon"
+                    viewBox="0 0 16 16">
+                    <path fill-rule="evenodd"
+                        d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5" />
+                </svg>
+            </label>
+
+            <input type="checkbox" name="" id="menu_hamburguesa">
+
+            <ul>
+                <li class="li_links">
+                    <a href="#" class="link">Inicio</a>
+                </li>
+                <li class="li_links">
+                    <a href="#" class="link">Sobre mi</a>
+                </li>
+                <li class="li_links">
+                    <a href="#" class="link">Productos</a>
+                </li>
+            </ul>
+
+        </nav>
+    </header>
+
 </body>
+
 </html>
